--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
   "homepage": "https://github.com/grudus/ExamsHelperWebsite#readme",
 
   "dependencies": {
+    "angular": "^1.6.4",
+    "angular-ui-router": "^0.4.2",
+    "angular-translate": "^2.15.1",
+    "angular-translate-loader-static-files": "^2.12.1",
+    "angular-translate-storage-cookie": "^2.12.1",
+    "angular-translate-storage-local": "^2.12.1",
+    "angular-cookies": "1.6.3"
   },
 
   "devDependencies": {
