--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 
   "dependencies": {
     "angular": "^1.6.4",
-    "angular-ui-router": "^0.4.2",
+    "angular-ui-router": "1.0.0-rc.1",
     "angular-translate": "^2.15.1",
     "angular-translate-loader-static-files": "^2.12.1",
     "angular-translate-storage-cookie": "^2.12.1",
@@ -34,6 +34,7 @@
     "resolve-url-loader": "^2.0.2",
     "node-sass": "^4.4.0",
     "sass-loader": "^6.0.3",
+    "ng-cache-loader": "^0.0.24",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
     "file-loader": "^0.10.1",
