--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "angular-translate-loader-static-files": "^2.12.1",
     "angular-translate-storage-cookie": "^2.12.1",
     "angular-translate-storage-local": "^2.12.1",
-    "angular-cookies": "1.6.3"
+    "angular-cookies": "1.6.3",
+    "angular-resource": "^1.6.4"
   },
 
   "devDependencies": {
