Remove materialize from source code - add to node_modules insted

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "angular-translate-storage-cookie": "^2.12.1",
     "angular-translate-storage-local": "^2.12.1",
     "angular-cookies": "1.6.3",
-    "angular-resource": "^1.6.4"
+    "angular-resource": "^1.6.4",
+    "materialize-css": "^0.98.2"
   },
 
   "devDependencies": {
