--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-translate-storage-cookie": "^2.12.1",
     "angular-translate-storage-local": "^2.12.1",
     "angular-ui-router": "1.0.0-rc.1",
+    "grudus-timepicker": "^0.2.3",
     "material-datetime-picker": "^2.4.0",
     "materialize-css": "^0.98.2",
     "moment": "^2.18.1",
