--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "angular-translate-storage-cookie": "^2.12.1",
     "angular-translate-storage-local": "^2.12.1",
     "angular-ui-router": "1.0.0-rc.1",
-    "grudus-timepicker": "^0.2.3",
+    "grudus-timepicker": "^1.0.0-0",
     "material-datetime-picker": "^2.4.0",
     "materialize-css": "^0.98.2",
     "moment": "^2.18.1",
@@ -35,24 +35,30 @@
     "ui-select": "^0.19.8"
   },
   "devDependencies": {
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^1.15.2",
-    "webpack-merge": "^4.0.0",
-    "resolve-url-loader": "^2.0.2",
-    "node-sass": "^4.4.0",
-    "sass-loader": "^6.0.3",
-    "ng-cache-loader": "^0.0.24",
-    "style-loader": "^0.13.2",
-    "url-loader": "^0.5.8",
-    "file-loader": "^0.10.1",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "css-loader": "^0.26.2",
+    "eslint": "^4.4.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "imports-loader": "^0.7.1",
     "json-loader": "^0.5.4",
     "ng-annotate": "^1.2.1",
     "ng-annotate-loader": "^0.2.0",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "css-loader": "^0.26.2"
+    "ng-cache-loader": "^0.0.24",
+    "node-sass": "^4.4.0",
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.13.2",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^1.15.2",
+    "webpack-merge": "^4.0.0"
   }
 }
