--- a/package.json
+++ b/package.json
@@ -35,9 +35,13 @@
     "ui-select": "^0.19.8"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.26.2",
     "eslint": "^4.4.1",
     "eslint-config-standard": "^10.2.1",
