--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/grudus/ExamsHelperWebsite#readme",
   "dependencies": {
     "angular": "^1.6.4",
+    "angular-animate": "^1.6.6",
     "angular-cookies": "1.6.3",
     "angular-moment": "^1.0.1",
     "angular-resource": "^1.6.4",
