--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "angular": "^1.6.4",
     "angular-animate": "^1.6.6",
+    "angular-chart.js": "^1.1.1",
     "angular-cookies": "1.6.3",
     "angular-moment": "^1.0.1",
     "angular-resource": "^1.6.4",
